

plugins {
    id 'java'
    id 'idea'
    id 'com.diffplug.spotless' version "6.25.0"
    id 'com.github.jakemarsden.git-hooks' version '0.0.2'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id("io.freefair.lombok") version "8.6"
}

group 'Kernbeisser'
version '2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/"
    }
}

gitHooks {
    hooks = ['pre-commit': 'spotlessApply']
}

test {
    useJUnit()
}

dependencies {
    constraints {
        implementation("org.apache.logging.log4j:log4j-core") {
            version {
                strictly("[2.17.1, 3[")
                prefer("2.17.1")
            }
            because("CVE-2021-44228: Log4j vulnerable to remote code execution")
        }
    }
    def hibernateVersion = '6.4.4.Final'
    implementation 'org.hibernate:hibernate-agroal:'+hibernateVersion
    implementation "org.hibernate:hibernate-envers:"+hibernateVersion
    implementation files("${rootDir}/libs/forms_rt.jar")
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
    implementation 'at.favre.lib:bcrypt:0.9.0'
    implementation "com.github.jiconfont:jiconfont-font_awesome:4.7.0.1"
    implementation 'com.github.jiconfont:jiconfont-swing:1.0.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
    implementation 'net.sf.jasperreports:jasperreports:6.20.0'
    implementation 'net.sf.jasperreports:jasperreports-fonts:6.20.0'
    implementation 'org.jfree:jfreechart:1.5.3'
    implementation 'com.formdev:flatlaf:2.4'
    implementation 'org.json:json:20220320'
    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.opencsv:opencsv:5.6'
    implementation group: 'org.ow2.asm', name: 'asm', version: '7.0'
    implementation 'org.javassist:javassist:3.27.0-GA'
    implementation 'org.objenesis:objenesis:1.2'
    implementation group: 'com.github.lgooddatepicker', name: 'LGoodDatePicker', version: '11.2.1'

    //Key-Annotation-Processor
    implementation project(":annotation-processor")
    annotationProcessor files("annotation-processor/build/libs/annotation-processor-2.0.jar")
    implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    //Tests
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    testImplementation 'org.mockito:mockito-inline:3.7.7'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
}

jar {
    manifest {
        attributes 'Main-Class': 'kernbeisser.Main'
    }
 //   fileMode 750
}

shadowJar {
    append 'jasperreports_extension.properties'
}

task copyAgent(type: Copy){
    from 'src/main/resources/Agent/Agent-1.0-SNAPSHOT.jar'
    into "$buildDir/libs"
 //   fileMode 750
}

task copyProductionFolderContent(type: Copy){
    from 'production'
    into "$buildDir/libs"
//    fileMode 750
}

task copyReportsFolder(type: Copy){
    from 'reports'
    into "$buildDir/libs/reports"
//    fileMode 750
}

copyProductionFolderContent.dependsOn copyAgent
processResources.dependsOn copyProductionFolderContent, copyReportsFolder//, chmodRecursively

spotless {
    java {
        googleJavaFormat()
    }
}